css/styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  @media screen and (max-width: 950px) {
    overflow-x: hidden !important;
  }
}
p {
  margin: 0;
}
@font-face {
  font-family: "adobeHebrew";
  src: url("../fonts/FbSpoiler-Bold.otf");
}
@font-face {
  font-family: "Fb Spoiler";
  src: url("../fonts/FbSpoiler-Regular.otf");
}
@font-face {
  font-family: "Fb Spoiler Bold";
  src: url("../fonts/FbSpoiler-Bold.otf");
}

body {
  background: url("../images/sky_4\ _7.png") top center/cover;
  overflow-x: hidden !important;
}

a {
  text-decoration: none;
  color: inherit;
}
.flex {
  display: flex;
  /* justify-content: space-around; */
}
.items-center {
  align-items: center;
}
.flex-between {
  display: flex;
  justify-content: space-between;
}
.flex-col {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.heading {
  height: max-content;
  padding: 0;
  margin: 0;
  font-size: 160px;
  line-height: 130px;
  color: #ffffff;
  font-weight: 900;
  font-family: Fb Spoiler Bold;
  text-align: center;
  @media screen and (max-width: 700px) {
    font-size: 70px;
    line-height: 60px;
    width: 100%;
    height: max-content;
    overflow: hidden;
    margin-bottom: 4rem;
  }
  @media screen and (max-width: 500px) {
    font-size: 70px;
    line-height: 60px;
    width: 100%;
    height: max-content;
    overflow: hidden;
  }
}
.text-blue {
  width: 442px;
  font-size: 128px;
  line-height: 60px;
  color: #024080;
  font-weight: 800;
  font-family: "Fb Spoiler";
  text-align: center;
}
.text-semi-bold {
  font-family: adobeHebrew, sans-serif;
  font-size: 23px;
  font-weight: 700;
  color: #f8fff7;
}
.text-bold {
  font-family: adobeHebrew, sans-serif;
  font-size: 35px;
  font-weight: 900;
  color: #f8fff7;
  /* margin-top: 0.3rem; */
}
.text-sm {
  font-family: adobeHebrew, sans-serif;
  font-size: 16px;
  color: #f8fff7;
}
.text-light-bold {
  /* width: 612px; */
  height: 108px;
  @media screen and (max-width: 500px) {
    width: auto;
    text-align: center;
    height: max-content;
    font-size: 16px;
  }
  font-size: 32px;
  line-height: 34px;
  color: #ffffff;
  font-weight: bold;
  font-family: Fb Spoiler;
  text-align: right;
}
.text-center {
  text-align: center;
}
.cta {
  @media screen and (max-width: 500px) {
    display: none;
  }
}
.text-footer-1 {
  /* width: 216px; */
  height: 52px;
  font-size: 19px;
  line-height: 28px;
  color: #ffffff;
  font-weight: bold;
  font-family: Fb Spoiler Bold;
  text-align: right;
}
.text-footer-2 {
  /* width: 562px; */
  height: 79px;
  font-size: 19px;
  text-decoration: none;
  color: inherit;
  line-height: 24px;
  color: #ffffff;
  font-weight: bold;
  font-family: Fb Spoiler;
  text-align: right;
  @media screen and(max-width:500px) {
    height: max-content;
    width: max-content;
    background-color: rebeccapurple;
  }
}
.text-footer-2 a {
  text-decoration: none;
  color: inherit;
  width: max-content;
}

.mt {
  margin-top: 0.5rem;
}
.gap-4 {
  gap: 0.5rem;
}
.border-l {
  border-left: 1.5px solid white;
  text-align: center;
  padding: 0rem 1rem;

  @media screen and (max-width: 500px) {
    border: none;
  }
}

/* Image */
.boys-image {
  height: 300px;
  @media screen and (min-width: 500px) {
    width: 600px;
    height: 300px;
    flex: 1;
  }
}
.flex-1 {
  flex: 1;
}
.logo {
  margin-top: -60px;
  position: relative;
  z-index: 100;
}

/* Hero */
.hero {
  overflow: hidden;
  display: flex;
  flex-wrap: wrap-reverse;
}

/* form box */
.box {
  padding: 0.5rem;
  background-color: rgba(255, 255, 255, 0.3);
  margin-bottom: 4rem;
  position: relative;
  padding: 0 2rem;
  width: max-content;
  height: 292px;
  @media screen and (max-width: 500px) {
    width: 100%;
    height: max-content;
    padding-top: 5rem;
  }
}
.circle {
  width: 227px;
  height: 227px;
  border-radius: 117px;
  background-color: #024080;
  border: 8.156000137329102px solid #00ace8;
  position: absolute;
  left: 0px;
  z-index: 10;
}

.text-container {
  overflow: hidden;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.slanted-text {
  transform: rotate(-15deg);
  text-align: center;
}
.text-a {
  font-size: 105px;
  letter-spacing: 0px;
  color: #ffffff;
  font-weight: 800;
  font-family: "Fb Spoiler";
  text-align: center;
  padding: 0 2rem;
}
.text-b {
  font-size: 26px;
  color: #ffd939;
  font-weight: bold;
  font-family: "Fb Spoiler";
  text-align: center !important;
  margin-top: -2rem;
}
.text-c {
  font-size: 15px;
  color: #ffffff;
  font-weight: bold;
  font-family: Fb Spoiler;
  text-align: center;
  margin-right: -3rem;
}
.text-mobile-blue {
  font-size: 30px;
  width: max-content;
  color: #024080;
  font-weight: bold;
  font-family: "Fb Spoiler";
  text-align: right;
}
.btn {
  width: 100%;
  height: 47px;
  font-size: 46px;
  line-height: 43px;
  color: #ffffff;
  font-weight: bold;
  font-family: Fb Spoiler;
  text-align: center;
  margin: 1rem 0;
  border: none;
  outline: none;
  cursor: pointer;
  @media screen and (max-width: 500px) {
    border-radius: 10px;
    height: 30px;
    font-size: 14px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  background-color: #013466;
}
.box::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: inherit;
  filter: blur(7px); /* Adjust the blur amount as needed */
  z-index: -1;
}

/* Register */
.register-header {
  font-size: 29px;
  line-height: 34px;
  color: #024080;
  font-weight: bold;
  font-family: Fb Spoiler Bold;
  text-align: center;
  @media screen and (max-width: 500px) {
    width: auto;
    font-size: 25px;
    height: auto;
  }
}
.box div {
  border-bottom: 2px solid white;
}
.box div input,
.box div select {
  outline: none;
  border: none;
  background: transparent;
  padding: 0.8rem;
  flex: 1;
  width: 100%;
  font-size: 24px;
  line-height: 28px;
  color: #024080;
  font-weight: bold;
  font-family: Fb Spoiler;
  text-align: right;
  @media screen and (max-width: 500px) {
    padding: 0.5rem;
  }
}
.fb_logo {
  width: 20px;
  border-radius: 50%;
}
.content {
  @media screen and (max-width: 500px) {
    flex-direction: column;
  }
}
/* footer */
.footer {
  min-height: 107px;
  width: 100%;
  background-color: #2b9a44;
  @media screen and (max-width: 500px) {
    flex-wrap: wrap;
    height: auto;
    width: 100%;
    padding: 1rem;
  }
}

